<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llLoginForm"
        android:layout_width="252dip"
        android:layout_height="287dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="57dip"
            android:src="@drawable/loxley_logo" android:layout_weight="57"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:ems="10"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:orientation="vertical" android:layout_weight="20">
        </LinearLayout>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_input_field"
            android:ems="10" android:layout_weight="35" android:paddingLeft="10dip" android:paddingRight="10dip"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:gravity="right"
            android:text="@string/email_example" android:layout_weight="35"/>

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/text_input_field"
            android:inputType="textPassword" android:layout_weight="35" android:paddingLeft="10dip" android:paddingRight="10dip"/>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:button="@drawable/checkbox_right"
            android:text="@string/remember" android:layout_weight="35"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:background="@drawable/btn_xml"
            android:padding="8dip"
            android:text="@string/login" android:layout_weight="35" android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:gravity="right"
            android:padding="7dip"
            android:text="@string/forgot" android:layout_weight="35"/>
    </LinearLayout>

</LinearLayout>