<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order #"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DuteDate : "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reference"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order sumary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="23 Apr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dip" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayout05"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_weight="160"
                android:gravity="center"
                android:text="Item Description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="56dip"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:gravity="center"
                android:text="Qty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="73dip"
                android:layout_height="wrap_content"
                android:layout_weight="73"
                android:gravity="center"
                android:text="Cost"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="98dip"
                android:layout_height="wrap_content"
                android:layout_weight="98"
                android:gravity="center"
                android:text="Discount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="68dip"
                android:layout_height="wrap_content"
                android:layout_weight="68"
                android:gravity="center"
                android:text="Total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="54dip"
                android:layout_height="wrap_content"
                android:layout_weight="54"
                android:gravity="center"
                android:text="VAT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10dip" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#123456"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/button1"
            android:ellipsize="end"
            android:text="Shipping Method : "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" android:singleLine="true"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="58dip"
            android:layout_height="28dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/header_btn_logout" android:text="Track" android:textColor="#ffffff"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RelativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalgbd"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalgbdvat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalgbdin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dip" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:divider="#00000000"
        android:listSelector="#00000000"
        android:dividerHeight="0dip" android:cacheColorHint="#00000000">
    </ListView>

</RelativeLayout>